--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,7 @@
 </script>
 
 <!-- Our own js file. -->
-<script src="{{ url_for('static', filename='/js/entry.js') }}"></script>
+<script src="/static/js/entry.js"></script>
 
 
 <!-- Our own css file.   Note how we can link directly here and not-->
