an extra slash was not what I needed

--- a/home/index.html
+++ b/home/index.html
@@ -35,12 +35,12 @@
 </script>
 
 <!-- Our own js file. -->
-<script src="/static/js/entry.js"></script>
+<script src="static/js/entry.js"></script>
 
 
 <!-- Our own css file.   Note how we can link directly here and not-->
  <!-- write any routing code in the Flask application. -->
-<link rel="stylesheet" href="/static/css/simple.css" />
+<link rel="stylesheet" href="static/css/simple.css" />
 
 
 </head>
