--- a/home/index.html
+++ b/home/index.html
@@ -1,48 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
+<!DOCTYPE html> <!-- Modern HTML5 DOCTYPE -->
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Input matrix</title>
 
-<!-- Bootstrap requires the following three meta tags to appear first -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CDN Links (these are correct) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-
-<title>Input matrix</title>
-
-<!-- Javascript and Cascading Style Sheets (css) libraries -->
-<!-- mostly from content delivery networks                 -->
-
-<!-- jquery; CDN load is usually quick because it's likely cached -->
-<script type="text/javascript"
-     src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-</script>
-
-<!-- Bootstrap stylesheet lets us have a 'responsive' layout; -->
-<!-- 12 column grid rearranges itself for smaller screens or windows. -->
-
-<!-- per http://getbootstrap.com/getting-started/  -->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet"
- href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
- integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-  crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script
- src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
- integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
- crossorigin="anonymous">
-</script>
-
-<!-- Our own js file. -->
-<script src="static/js/entry.js"></script>
-
-
-<!-- Our own css file.   Note how we can link directly here and not-->
- <!-- write any routing code in the Flask application. -->
-<link rel="stylesheet" href="static/css/simple.css" />
-
-
+    <!-- YOUR LOCAL FILES - CORRECTED PATHS -->
+    <link rel="stylesheet" href="static/css/simple.css"> <!-- No leading slash! -->
+    <script src="static/js/entry.js"></script> <!-- No leading slash! -->
 </head>
 
 <body>
