--- a/home/index.html
+++ b/home/index.html
@@ -36,11 +36,13 @@
         <input id="cols" name="cols" type="text" width="15"
                autocomplete="off" autofocus />
 
-        
-        <button type="button" id="submit" class="btn btn-default">submit</button>
+        <div class="button-group"></div>
+          <button type="button" id="submit" class="btn btn-default">submit</button>
 
 
-        <button type="button" id="reset" class="btn btn-default"> reset </button>
+          <button type="button" id="reset" class="btn btn-default"> reset </button>
+        </div>
+
         <div class="row">
 
           <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
