--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+    <!-- mathjax Links (i believe these are also correct) -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
+
     <!-- YOUR LOCAL FILES - CORRECTED PATHS -->
     <link rel="stylesheet" href="static/css/simple.css"> <!-- No leading slash! -->
     <script src="static/js/entry.js"></script> <!-- No leading slash! -->
