adding dark maybe

--- a/home/index.html
+++ b/home/index.html
@@ -17,11 +17,13 @@
     </script>
 
     <!-- YOUR LOCAL FILES - CORRECTED PATHS -->
-    <link rel="stylesheet" href="static/css/simple.css"> <!-- No leading slash! -->
+    <link rel="stylesheet" href="static/css/simple_light.css"> <!-- No leading slash! -->
     <script src="static/js/entry.js"></script> <!-- No leading slash! -->
 </head>
 
 <body>
+  <button id="light-dark" class="light-dark">dark</button>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 text-center">
