fix dark button to light

--- a/home/index.html
+++ b/home/index.html
@@ -26,10 +26,12 @@
 </head>
 
 <body>
-  <button id="light-dark" class="light-dark">dark</button>
 
 <div class="container">
+
   <div class="row">
+        <button id="light-dark" class="light-dark">light</button>
+
     <div class="col-xs-12 text-center">
       <h1>what dimension is your matrix?</h1>
     </div>
