--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-        <!-- KaTeX CSS -->
+    <!-- KaTeX CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
 
     <!-- KaTeX Core JS -->
@@ -23,6 +23,8 @@
     <!-- YOUR LOCAL FILES - CORRECTED PATHS -->
     <link rel="stylesheet" href="static/css/simple_light.css"> <!-- No leading slash! -->
     <script src="static/js/entry.js"></script> <!-- No leading slash! -->
+    <script src="../Matrix.js"></script> 
+
 </head>
 
 <body>
