--- a/home/index.html
+++ b/home/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row"><!-- i dont know what this is doing-->
     <div class="col-xs-12 text-center">
       
       <form id="entry">
@@ -47,7 +47,7 @@
         <input id="rows" name="rows" type="text" width="15"
                autocomplete="off" autofocus />
 
-        <label for="cols" style="margin-left: 10px;">cols:</label>
+        <label for="cols" style="margin-left: 10px;">cols:</label><!-- i dont know what this is doing-->
         <input id="cols" name="cols" type="text" width="15"
                autocomplete="off" autofocus />
 
@@ -56,7 +56,7 @@
 
         <button type="button" id="reset" class="btn btn-default"> reset </button>
 
-        <div class="row">
+        <div class="row"><!-- i dont know what this is doing-->
 
           <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
         </div>
@@ -66,6 +66,9 @@
         <button id="toggleMode" class="btn btn-info" style="display: none;">
         fraction <!-- default togglebtn starts as fractional-->
         </button>
+        <button type="button" id="submmit-matrix" class="btn btn-default">start rref helper</button>
+
+
 
       </form>
     </div>
