--- a/home/index.html
+++ b/home/index.html
@@ -66,7 +66,7 @@
         <button id="toggleMode" class="btn btn-info" style="display: none;">
         fraction <!-- default togglebtn starts as fractional-->
         </button>
-        <button type="button" id="submmit-matrix" class="btn btn-default">start rref helper</button>
+        <button type="button" id="submmit-matrix" class="btn btn-default">rref helper</button>
 
 
 
