dark button works but not perfectly

--- a/home/index.html
+++ b/home/index.html
@@ -63,12 +63,12 @@
         
         <div id="error-message"></div>
 
-        <button id="toggleMode" class="btn btn-info" style="display: none;">
-        fraction <!-- default togglebtn starts as fractional-->
-        </button>
-        <button type="button" id="submmit-matrix" class="btn btn-default">rref helper</button>
+        <div style="height: 40px;"></div>
 
-
+        <button id="toggleMode" class="btn btn-info" style="display: none;">fraction</button>
+         <!-- default togglebtn starts as fractional-->
+        
+        <button type="button" id="submit-matrix" class="btn btn-default" style="display: none;">go rref</button>
 
       </form>
     </div>
