--- a/calc/calc.html
+++ b/calc/calc.html
@@ -22,7 +22,7 @@
 
         <!-- YOUR LOCAL FILES - CORRECTED PATHS -->
         <link rel="stylesheet" href="static/css/calc_light.css"> <!-- No leading slash! -->
-        <script src="static/js/entry.js"></script> <!-- No leading slash! -->
+        <script src="static/js/calc.js"></script> <!-- No leading slash! -->
         <script src="../Matrix.js"></script> 
 
     </head>
