--- a/home/index.html
+++ b/home/index.html
@@ -1,3 +1,6 @@
+<!-- Note to Jennifer: to open with live server, right click in this file --> 
+ <!-- Once in live server view, command-option-c to open javascript console menu -->
+
 <!DOCTYPE html> <!-- Modern HTML5 DOCTYPE -->
 <html lang="en">
 <head>
