--- a/home/index.html
+++ b/home/index.html
@@ -71,7 +71,7 @@
         <button id="toggleMode" class="btn btn-info" style="display: none;">fraction</button>
          <!-- default togglebtn starts as fractional-->
         
-        <button type="button" id="submit-matrix" class="btn btn-default" style="display: none;">go rref</button>
+        <button type="button" id="submit-matrix" class="btn btn-default" style="display: none;">go</button>
 
       </form>
     </div>
