no more mime errors

--- a/calc/calc.html
+++ b/calc/calc.html
@@ -18,9 +18,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"></script>
 
     <!-- Your files - Matrix.js MUST come before calc.js This second -->
-    <link rel="stylesheet" href="../static/css/calc_light.css" id="main-stylesheet">
+    <!--link rel="stylesheet" href="static/css/calc_light.css"-->
     <script src="../Matrix.js"></script>  
-    <script src="../static/js/calc.js"></script>   
+    <script src="static/js/calc.js"></script>   
 </head>
 <body>
     <!-- Your existing body content -->
