--- a/calc/calc.html
+++ b/calc/calc.html
@@ -27,10 +27,13 @@
     <div class="container">
         <div class="row">
             <button id="light-dark" class="light-dark">light</button>
+       
+            <div class="col-xs-12 text-center">
+            <h1>original matrix</h1>
+            </div>
+
         </div>
-        <div class="row">
-            <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;">
-                <p>Loading matrix...</p>
+
             </div>
         </div> 
         <div id="error-message"></div>
