fixing minor format styling dark-calc

--- a/calc/calc.html
+++ b/calc/calc.html
@@ -33,10 +33,16 @@
             </div>
 
         </div>
+                <div id="matrix"></div>
 
-            </div>
-        </div> 
+            <button id="swap" class="op-button">swap</button>
+            <button id="scale" class="op-button">scale</button>
+            <button id="add" class="op-button">add</button>
+
+            <div id="btn-info"></div>
+           
+        
         <div id="error-message"></div>
-    </div>
+         </div>
 </body>
 </html>
