making input boxes and style

--- a/calc/calc.html
+++ b/calc/calc.html
@@ -41,7 +41,9 @@
             <button id="scale" class="op-button">scale</button>
             <button id="add" class="op-button">add</button>
 
-            <div id="btn-info"></div>
+            <div id="btn-abt"></div>
+
+            <div id ="operation-input"></div>
            
         
         <div id="error-message"></div>
