--- a/calc/calc.html
+++ b/calc/calc.html
@@ -31,11 +31,12 @@
             <div class="col-xs-12 text-center">
             <h1>original matrix</h1>
             </div>
-
+            <div id="old-matrix"></div>
+                <h1>        </h1>
         </div>
-                <div id="matrix"></div>
+            <div id="matrix"></div>
 
-            <h1>      </h1>
+                <h1>      </h1>
 
             <button id="swap" class="op-button">swap</button>
             <button id="scale" class="op-button">scale</button>
