--- a/calc/calc.html
+++ b/calc/calc.html
@@ -31,12 +31,16 @@
             <div class="col-xs-12 text-center">
             <h1>original matrix</h1>
             </div>
+
             <div id="old-matrix"></div>
+
                 <h1>        </h1>
         </div>
             <div id="matrix"></div>
 
                 <h1>      </h1>
+
+                <h2 id= "matrix-title" style="display: none;">matrix 0-1</h2>
 
             <button id="swap" class="op-button">swap</button>
             <button id="scale" class="op-button">scale</button>
